@@ -9,14 +9,14 @@ DEPLOY_DIR=@sysconfdir@/@PACKAGE@
 test -e ${DEPLOY_DIR}/mesos-deploy-env.sh && \
   . ${DEPLOY_DIR}/mesos-deploy-env.sh
 
-# Find the list of slaves.
-SLAVES_FILE="${DEPLOY_DIR}/slaves"
-if test ! -e ${SLAVES_FILE}; then
-  echo "Failed to find ${SLAVES_FILE}"
+# Find the list of agents.
+AGENTS_FILE="${DEPLOY_DIR}/slaves"
+if test ! -e ${AGENTS_FILE}; then
+  echo "Failed to find ${AGENTS_FILE}"
   exit 1
 fi
 
-# The expected format of the SLAVES_FILE is one IP/host per line.
+# The expected format of the AGENTS_FILE is one IP/host per line.
 # Additionally, you can temporarily comment out a host or IP by placing a hash
 # character '#' as the first character of the line.  As an example, changing
 # this MASTERS_FILE:
@@ -35,7 +35,7 @@ fi
 # 10.1.1.1  # my first IP
 # 10.1.1.2  # my second IP
 #
-SLAVES=`cat ${SLAVES_FILE} | grep -v '^#'`
+AGENTS=`cat ${AGENTS_FILE} | grep -v '^#'`
 
 daemon="@sbindir@/mesos-daemon.sh"
 
@@ -44,11 +44,11 @@ if test "x${DEPLOY_WITH_SUDO}" = "x1"; then
   daemon="sudo ${daemon}"
 fi
 
-# Launch slaves.
-for slave in ${SLAVES}; do
-  echo "Starting mesos-slave on ${slave}"
-  echo ssh ${SSH_OPTS} ${slave} "${daemon} mesos-slave </dev/null >/dev/null"
-  ssh ${SSH_OPTS} ${slave} "${daemon} mesos-slave </dev/null >/dev/null" &
+# Launch agents.
+for agent in ${AGENTS}; do
+  echo "Starting mesos-agent on ${agent}"
+  echo ssh ${SSH_OPTS} ${agent} "${daemon} mesos-agent </dev/null >/dev/null"
+  ssh ${SSH_OPTS} ${agent} "${daemon} mesos-agent </dev/null >/dev/null" &
   sleep 0.1
 done
 
