@@ -70,6 +70,7 @@ Additional API Changes:
 Binary API Changes:
   * [MESOS-5055] - Replace Master/Slave Terminology Phase I - Update strings in
     the log message and standard output
+  * [MESOS-3782] - Replace Master/Slave Terminology Phase I - Duplicate/Rename binaries.
 
 
 Release Notes - Mesos - Version 0.28.1
